fix: need to fix ui while showing li list some issue regarding the overflow of values

--- a/src/TodoList.css
+++ b/src/TodoList.css
@@ -169,7 +169,7 @@ li {
     border-radius: 1.5rem;
     padding: 1rem 1.5rem;
     margin: 0.7rem 0;
-    background-color: #fff;
+    background-color: #c77a6d;
     display: flex;
     align-items: center;
     opacity: 0;
@@ -178,13 +178,13 @@ li {
 }
 
 li:hover {
-    background-color: #f9f9f9;
+    background-color: #5d7c6f;
 }
 
 /* Todo Item Styles */
 .todo-item {
     border-radius: 1.5rem;
-    background-color: #eee;
+    background-color: #64ad9d;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 0.8rem;
     flex: 1;
